# better_collect

./: CHANGELOG.MD  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  README.md  README.tpl
.github/workflows/: ci.yml
benches/: find.rs  large_state.rs  min_max.rs  sum_find.rs  sum_max.rs
examples/: asm_view.rs
scripts/: generate_doc.sh  generate_readme.sh  run_test.sh  watch_doc.sh
src/: accum_hint.rs  adaptors.rs  aggregate.rs  cmp.rs  collections.rs  collector.rs  imp.rs  iter.rs  lib.rs  mem.rs  num.rs  ops.rs  prelude.rs  string.rs  test_utils.rs  traits.rs  unit.rs  vec.rs
src/adaptors/: chain.rs  cloned.rs  cloning.rs  combine.rs  copied.rs  copying.rs  filter.rs  fold.rs  fold_ref.rs  funnel.rs  fuse.rs  fuse_by_ref.rs  map.rs  map_output.rs  map_ref.rs  nest.rs  nest_family.rs  owned.rs  partition.rs  puller.rs  skip.rs  take.rs  take_while.rs  then.rs  unbatching.rs  unbatching_ref.rs  unzip.rs
src/aggregate/: aggregate_op.rs  entry.rs  group.rs  group_map.rs  imp.rs  into_aggregate.rs  map.rs  ref_aggregate_op.rs
src/cmp/: max.rs  max_by.rs  max_by_key.rs  min.rs  min_by.rs  min_by_key.rs  min_max.rs  min_max_base.rs  min_max_by.rs  min_max_by_key.rs
src/collections/: binary_heap.rs  btree_map.rs  btree_set.rs  hash_map.rs  hash_set.rs  linked_list.rs  vec_deque.rs
src/collector/: adapters.rs  collector.rs  collector_base.rs  collector_by_mut.rs  collector_by_ref.rs  into_collector.rs  ref_collector.rs  sink.rs
src/imp/: all_any.rs  cmp.rs  collections.rs  count.rs  find.rs  fold.rs  fold_ref.rs  last.rs  num.rs  product.rs  reduce.rs  sink.rs  string.rs  sum.rs  sync.rs  try_fold.rs  try_fold_ref.rs  unit.rs  vec.rs
src/iter/: count.rs  driver.rs  find.rs  fold.rs  iterator_ext.rs  last.rs  reduce.rs  try_fold.rs
src/mem/: dropping.rs  forgetting.rs
src/num/: product.rs  sum.rs
src/ops/: product.rs  sum.rs
src/slice/: concat.rs
src/string/: concat_str.rs  concat_string.rs
src/sync/: mpsc.rs
src/test_utils/: collector_tester.rs
src/traits/: better_collect.rs  collector.rs  collector_by_mut.rs  collector_by_ref.rs  into_collector.rs  ref_collector.rs
(+81 files in other folders)
