[package]
name = "better_collect"
version = "0.2.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Provides a composable, declarative way to consume an iterator"
repository = "https://github.com/discreaminant2809/better_collect.git"
readme = "README.md"
categories = ["rust-patterns", "no-std", "no-std::no-alloc", "algorithms"]
keywords = ["collector", "fold", "unzip", "composition", "iterator"]

[dependencies]

[features]
default = ["std"]
alloc = []
std = ["alloc"]