[package]
name = "better_collect"
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Provides a composable, declarative way to consume an iterator"
repository = "https://github.com/discreaminant2809/better_collect.git"
readme = "README.md"
categories = ["rust-patterns", "no-std", "no-std::no-alloc", "algorithms"]
keywords = ["collector", "fold", "unzip", "composition", "iterator"]

[dependencies]

[dev-dependencies]
proptest = { version = "1.9.0", default-features = false, features = ["std"] }

[features]
default = ["std"]
alloc = []
std = ["alloc"]
unstable = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
